--- a/src/app/dashboard/character-assign/assign-modal/assign-modal.page.html
+++ b/src/app/dashboard/character-assign/assign-modal/assign-modal.page.html
@@ -45,7 +45,7 @@
                             </ion-col>
                             <ion-col size="12">
                                 <ion-button class="bold" (click)="confirmAssignUser()" [disabled]="!userId"
-                                    expand="block">
+                                    expand="block" shape="round">
                                     {{"CharacterAssign.save" | translate}}
                                 </ion-button>
                             </ion-col>
@@ -59,7 +59,7 @@
                             </ion-col>
                             <ion-col size="12">
                                 <ion-button class="bold" (click)="confirmAssignName()" [disabled]="!userName"
-                                    expand="block">
+                                    expand="block" shape="round">
                                     {{"CharacterAssign.save" | translate}}
                                 </ion-button>
                             </ion-col>
