--- a/src/app/dashboard/character-assign/character-assign.page.html
+++ b/src/app/dashboard/character-assign/character-assign.page.html
@@ -13,7 +13,7 @@
     <ion-grid class="character-assign-grid">
         <ion-row>
             <ion-col size="12">
-                <ion-text color="primary">
+                <ion-text color="light">
                     <h5 class="ion-text-center bold section-title">{{"Basic.town" | translate}}</h5>
                 </ion-text>
             </ion-col>
@@ -31,7 +31,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="12">
-                <ion-text color="primary">
+                <ion-text color="light">
                     <h5 class="ion-text-center bold section-title">{{"Basic.mafia" | translate}}</h5>
                 </ion-text>
             </ion-col>
@@ -49,7 +49,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="12">
-                <ion-text color="primary">
+                <ion-text color="light">
                     <h5 class="ion-text-center bold section-title">{{"Basic.neutrals" | translate}}</h5>
                 </ion-text>
             </ion-col>
@@ -67,7 +67,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="12">
-                <ion-text color="primary">
+                <ion-text color="light">
                     <h5 class="ion-text-center bold section-title">{{"Basic.cits" | translate}}</h5>
                 </ion-text>
             </ion-col>
@@ -83,9 +83,9 @@
                 </ion-row>
             </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row class="ion-margin-top">
             <ion-col size="12">
-                <ion-button class="bold" (click)="confirmSelection()" [disabled]="!playersAssignedProperly" expand="block" size="large">
+                <ion-button class="bold" (click)="confirmSelection()" [disabled]="!playersAssignedProperly" expand="block" size="large" shape="round">
                     {{"CharacterAssign.confirm" | translate}}
                 </ion-button>
             </ion-col>
